[package]
name = "tracker"
version = "0.1.1"
edition = "2025"
authors = ["leji-a <toviya3135@gmail.com>"]
description = "A terminal-based episode tracker"
license = "MIT"

[[bin]]
name = "tracker"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"